@@ -225,6 +225,12 @@ Library
 - Issue #7356: ctypes.util: Make parsing of ldconfig output independent of
   the locale.
 
+Extension Modules
+-----------------
+
+- Issue #2810: Fix cases where the Windows registry API returns
+  ERROR_MORE_DATA, requiring a re-try in order to get the complete result.
+
 Build
 -----
 
